Temporarily/Subject3/Important/slurm-18641853.out
  File "sub3_T.py", line 18
    print('Xx_T.shape', Xx_T.shape)
        ^
SyntaxError: invalid syntax
